# MeanShiftClustering

./: CMakeLists.txt  Cluster.cpp  Cluster.h  ClusterManager.cpp  ClusterManager.h  MeanShift.cpp  MeanShift.h  Point.cpp  Point.h  README.md  SpeedUpTests.cpp  SpeedupTests.h  Utils.cpp  Utils.h  generate_datasets.py  input.csv  main.cpp  plot_clusters.py
C++/: Cluster.cpp  Cluster.h  ClusterManager.cpp  ClusterManager.h  MeanShift.cpp  MeanShift.h  Point.cpp  Point.h  SpeedUpTests.cpp  SpeedupTests.h  Utils.cpp  Utils.h  main.cpp
CUDA/: MeanShiftClustering.cu  Utils.cpp  Utils.h
Utils/: plot_clusters.py
datasets/different_size/: 2D_data_100.csv  2D_data_1000.csv  2D_data_20000.csv  2D_data_50000.csv  3D_data_100.csv  3D_data_10000.csv
latex/paper_mean_shift_PC/: egbib.bib  paper_mean_shift_PC.tex
latex/presentation_mean_shift_PC/: presentation_mean_shift_PC.tex
output/: ResultsSpeedUpTests.csv
output/bandwidth/: out_2D_data_10000.csv
output/different_clusters/: out_2D_data_1.csv  out_2D_data_2.csv  out_2D_data_3.csv  out_2D_data_4.csv  out_2D_data_5.csv  out_3D_data_1.csv  out_3D_data_2.csv  out_3D_data_3.csv  out_3D_data_4.csv  out_3D_data_5.csv
output/different_size/: out_2D_data_100.csv  out_2D_data_1000.csv  out_2D_data_20000.csv  out_2D_data_50000.csv  out_3D_data_100.csv  out_3D_data_1000.csv  out_3D_data_20000.csv  out_3D_data_50000.csv
utils/: generate_datasets.py
